--- a/SearchDemo/Podfile
+++ b/SearchDemo/Podfile
@@ -5,6 +5,9 @@ target 'SearchDemo' do
 
 pod 'SnapKit'
 pod 'SwiftyJSON', '~> 4.0'
-
+pod 'SSZipArchive'
+#pod 'PDFReader'
+pod 'WebViewJavascriptBridge', '~> 6.0'
+pod 'PKHUD', , '~> 5.3.0'
 
 end
